2003-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_set_media_device):
	* src/totem.c: (totem_setup_preferences): fix setting the media
	device, yet again

2003-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_realize), (gtk_xine_set_fullscreen): we
	don't need a thread-safe X, we have 2 connections to the X server,
	remove all the extraneous locks

2003-02-05  Bastien Nocera  <hadess@hadess.net>

	* README:
	* src/gtk-xine.c: (gtk_xine_get_type),
	(gtk_xine_set_audio_channel), (gtk_xine_is_fullscreen),
	(gtk_xine_set_volume), (gtk_xine_get_current_frame),
	(gtk_xine_get_current_frame_rgb), (scale_line_1_1),
	(scale_line_45_64), (scale_line_15_16), (scale_image),
	(yuy2toyv12), (yv12_2_rgb):
	* src/gtk-xine.h: remove usage of deprecated stuff (GtkType, gint,
	etc.), fixed prototype for gtk_xine_is_fullscreen (), updated TODO
	list in the README

2003-02-05  Bastien Nocera  <hadess@hadess.net>

	* README: updated requirements
	* data/.cvsignore: updated
	* data/Makefile.am:
	* data/schemas.sh: added generation of a script to update an existing
	gconf install
	* src/gtk-xine.c: (gtk_xine_class_init), (gtk_xine_instance_init),
	(gtk_xine_realize), (gtk_xine_unrealize), (gtk_xine_tick_send),
	(gtk_xine_play):
	* src/gtk-xine.h:
	* src/gtkxine-marshal.list:
	* src/totem-video-thumbnailer.c: (save_pixbuf):
	* src/totem.c: (update_mrl_label), (totem_action_previous),
	(totem_action_next), (update_current_time), (update_cb_often),
	(video_widget_create): add support for a "tick" signal, remove X
	completion event handling, it's now in the video output plugin, added
	better error message for totem-video-thumbnailer

2003-02-04  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in (ALL_LINGUAS): Added pl (Polish).

2003-02-02  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_set_fullscreen): use the monitor's
	geometry, not the full display's to show the fullscreen window
	(Should close #101149)
